fix: use npx tsc for TypeScript type checking to fix GitHub Actions

--- a/frontend/justfile
+++ b/frontend/justfile
@@ -99,7 +99,7 @@ format-check:
 # Type checking
 type-check:
     @echo "Running TypeScript type checking..."
-    @npm run type-check
+    @npx tsc --noEmit
 
 # Run all code quality checks
 quality: lint format-check type-check
