--- a/frontend/justfile
+++ b/frontend/justfile
@@ -99,7 +99,7 @@ format-check:
 # Type checking
 type-check:
     @echo "Running TypeScript type checking..."
-    @npx tsc --noEmit
+    @npx tsc --noEmit --project .
 
 # Run all code quality checks
 quality: lint format-check type-check
