Fix code quality issues: remove manual sys.path manipulation and fix indentation
- Remove manual sys.path manipulation from conftest.py (line 21)
- Use proper pytest pythonpath configuration instead
- Fix indentation in setup.sh (line 187)
- Update pytest.ini to use modern [tool:pytest.ini_options] format

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[tool:pytest.ini_options]
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
@@ -15,6 +15,7 @@ addopts =
     --cov-fail-under=80
     --asyncio-mode=auto
     --disable-warnings
+pythonpath = app
 markers =
     unit: Unit tests
     integration: Integration tests
