Improve process management and development workflow
- Add reliable PID-based process management for backend and frontend
- Implement clean start/stop commands using justfile
- Add frontend restart command for development workflow
- Fix database seeding with proper enum handling
- Enhance setup.sh with checksum verification for security
- Use direct Node execution for frontend to avoid process management issues
- Ensure .pid files are properly ignored in .gitignore

--- a/backend/justfile
+++ b/backend/justfile
@@ -23,7 +23,8 @@ venv:
 # Run the application in development mode
 dev:
     @echo "Starting development server..."
-    uv run uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+    uv run uvicorn app.main:app --reload --host 0.0.0.0 --port 8000 & echo $! > .pid
+    @echo "Backend started with PID: $(cat .pid)"
 
 # Run the application in production mode
 prod:
