--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.0",
     "@types/jest": "^29.5.14",
+    "concurrently": "^9.2.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.0",
@@ -51,6 +52,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "node node_modules/react-scripts/scripts/start.js & echo $! > .pid",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
