feat: implement smart configuration system and improve development workflow
- Add smart configuration with environment-aware database connections
- Implement automatic environment detection (Docker vs local)
- Fix frontend PID management for reliable service control
- Add just dev-restart and just restart-docker commands
- Refactor setup.sh to focus on environment preparation only
- Update docker-compose.yml to use environment variables
- Migrate from react-query to @tanstack/react-query v5
- Improve AI service initialization with better error handling
- Update DEVELOPMENT.md with comprehensive smart configuration guide
- Add docker-compose.env.example for environment setup
- Fix user registration steps variable naming for clarity
- All tests passing and quality checks completed

--- a/frontend/justfile
+++ b/frontend/justfile
@@ -32,8 +32,8 @@ node-info:
 # Start development server
 dev:
     @echo "Starting development server..."
-    npm run dev &
-    @echo "Frontend started in background"
+    npm run dev
+    @echo "Frontend started in background (PID: $$(cat .pid))"
 
 # Build for production
 build:
