--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.14.0",
     "@mui/x-charts": "^6.0.0",
     "@mui/x-date-pickers": "^6.10.0",
+    "@tanstack/react-query": "^5.17.0",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -23,7 +24,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.0",
     "react-hook-form-mui": "^6.0.0",
-    "react-query": "^3.39.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.9.0",
