feat: replace console logging with production-ready loglevel library
- Install loglevel for structured, environment-aware logging
- Replace all console.log/console.error calls with structured logging
- Add convenience logging functions for common patterns
- Configure log levels based on environment (DEBUG in dev, ERROR in prod)
- Support environment variable overrides via REACT_APP_LOG_LEVEL
- Fix AudioClip validation to handle both pre-recorded and TTS audio
- Improve type documentation for AudioClip interface

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mui/x-charts": "^6.0.0",
     "@mui/x-date-pickers": "^6.10.0",
     "@tanstack/react-query": "^5.17.0",
+    "@types/loglevel": "^1.5.4",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.0",
+    "loglevel": "^1.9.2",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
