Implement comprehensive Cucumber test suite for listen-first micro-lesson
- Add listen-first reveal gate feature tests (3 scenarios, 18 steps)
- Add phrase replays after reveal feature tests (2 scenarios, 12 steps)
- Add lightweight progress signals feature tests (1 scenario, 5 steps)
- Create shared step definitions and common test state
- Add Cucumber test commands to justfiles
- Update just test to include Cucumber tests automatically
- All 6 scenarios passing with 35 steps total

Tests verify existing functionality without adding new features:
- Listen-first reveal gate behavior (text hiding/showing logic)
- Phrase replay functionality (individual phrase interaction)
- Progress signal completion (progress tracking and XP updates)

--- a/frontend/justfile
+++ b/frontend/justfile
@@ -76,6 +76,16 @@ test-e2e-browser browser:
     @echo "Running E2E tests with {{browser}}..."
     @just run-npm "run test:e2e -- --project={{browser}}"
 
+# Run Cucumber tests
+test-cucumber:
+    @echo "Running Cucumber tests..."
+    @npx cucumber-js features/ --format progress
+
+# Run Cucumber tests with HTML report
+test-cucumber-html:
+    @echo "Running Cucumber tests with HTML report..."
+    @npx cucumber-js features/ --format progress --format html:cucumber-report.html
+
 # Lint code
 lint:
     @echo "Running ESLint..."
@@ -241,6 +251,8 @@ help:
     @echo "  just test            - Run tests"
     @echo "  just test-cov        - Run tests with coverage"
     @echo "  just test-e2e        - Run E2E tests"
+    @echo "  just test-cucumber   - Run Cucumber tests"
+    @echo "  just test-cucumber-html - Run Cucumber tests with HTML report"
     @echo ""
     @echo "Code Quality:"
     @echo "  just lint            - Run ESLint"
