--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,11 +38,17 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/register": "^7.28.3",
+    "@cucumber/cucumber": "^12.1.0",
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.0",
     "@types/jest": "^29.5.14",
+    "chai": "^5.2.1",
     "concurrently": "^9.2.0",
+    "cucumber-html-reporter": "^7.2.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.0",
