--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mui/x-charts": "^6.0.0",
     "@mui/x-date-pickers": "^6.10.0",
     "@tanstack/react-query": "^5.17.0",
+    "@types/loglevel": "^1.5.4",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.0",
+    "loglevel": "^1.9.2",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
@@ -36,11 +38,18 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/register": "^7.28.3",
+    "@cucumber/cucumber": "^12.1.0",
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.0",
+    "@types/chai": "^5.2.2",
     "@types/jest": "^29.5.14",
+    "chai": "^5.2.1",
     "concurrently": "^9.2.0",
+    "cucumber-html-reporter": "^7.2.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.0",
@@ -48,7 +57,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "playwright": "^1.38.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "ts-node": "^10.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
